--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@ limitations under the License.
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <sonar.organization>Maxxo-o</sonar.organization>
-        <sonar.projectKey>SONAR_TOKEN</sonar.projectKey>
+        <sonar.projectKey>Maxxo-o_TP_Industr</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.java.libraries></sonar.java.libraries>
     </properties>
